# DeakinRobocupSoccer

./: README.markdown
deakinremotecontrolv4/: deakinremotecontrolv4.pml  manifest.xml
deakinremotecontrolv4/deakinremotecontrolv4/: behavior.xar
image/home/nao/.ssh/: authorized_keys
robot/: CMakeLists.txt  runswift.cmake
robot/perception/localisation/: MultiGaussianDistribution.cpp  SimpleGaussian.cpp  SimpleGaussian.hpp
